--- a/gamepage.html
+++ b/gamepage.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Página Jogo</h1>
+    <p>Tutorial</p>
     <a href="index.html">Voltar para página Home</a>
 </body>
 </html>
