Acrescentado link para página do Jogo na Web, acrescentado título para texto de personagem

--- a/gamepage.html
+++ b/gamepage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Página Jogo</h1>
-    <p>Tutorial</p>
+    <p>Personagens</p>
     <a href="index.html">Voltar para página Home</a>
 </body>
 </html>
