--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
     <h1>Página Home</h1>
     <a href="gamepage.html">Ir para página do Jogo</a>
+    <h2>Tudo sobre Stardew Valley</h2>
+
+<p>Logo do Jogo Stardew Valley</p>
+
+<a href="https://pt.stardewvalleywiki.com/Stardew_Valley_Wiki">Wiki Stardew Valley</a>
 </body>
 </html>
