Acrescentado link para Wiki e arquivo READ ME

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Página Home</h1>
-    <a href="gamepage.html">Ir para página do Jogo</a>
+    <a href="gamepage.html">Ir para página de Personagens</a>
     <h2>Tudo sobre Stardew Valley</h2>
 
-<p>Logo do Jogo Stardew Valley</p>
+<p>Click no link para ir para página da Wiki do Jogo</p>
 
 <a href="https://pt.stardewvalleywiki.com/Stardew_Valley_Wiki">Wiki Stardew Valley</a>
 </body>
